# Pointing

./: CMakeCache.txt  CMakeLists.txt  HandTest.py  KinectTest.c  Makefile  README.md  SegPhoto.py  findHands.py  getSegments.py  main.py  point.py  pointPicture.py  pointing.py  pointingVector.py
old_versions/: KinectTest.c  SegPhoto.py  cmake_install.cmake  point.py  pointPicture.py
